--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -155,24 +155,30 @@
   #gamesstilltoplay {
     position: relative;
     top: -18px;
-    right: 265px;
+    right: 217px;
     text-align: center;
     margin-right:-17px;
   }
   #gamesstilltovote {
     position: relative;
     top: -18px;
-    right: 143px;
+    right: 116px;
     text-align: center;
     margin-right:-17px;
   }
   #resultsstilltosee {
     position: relative;
     top: -18px;
-    right: 32px;
+    right: 28px;
     text-align: center;
     padding-right: 4px;
     margin-right:-17px;
+  }
+  .mainpagetopbuttons {
+    padding-left: 7px;
+    padding-right: 7px;
+    margin-left: 2px;
+    margin-right: 2px;
   }
   .graphiclink a {
     text-decoration: none
