--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -85,7 +85,6 @@
         <span style="margin-top: 12px;">Acros with no new votes:</span>
       <% end %>
       <% @finishedlightning.each do |game| %>
-
         <span class="completedgamelink">
           <%= link_to(game) do %>
             <% if game.whovoted == "" %>
@@ -110,6 +109,7 @@
         <br>
       <% end %>
     </span>
+    <%= paginate @finishedlightning %>
     <% if current_user.tooltips == true %>
     <fieldset class="tooltips">
       <legend style="text-align: left; margin-left: 6px;">Tip</legend>
