--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -174,6 +174,9 @@
     padding-right: 4px;
     margin-right:-17px;
   }
+  button#mainplaygamesbutton {
+    margin-left: -2px;
+  }
   .mainpagetopbuttons {
     padding-left: 7px;
     padding-right: 7px;
