--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -84,32 +84,13 @@
       <% if @finishedlightning.count > 0 %>
         <span style="margin-top: 12px;">Acros with no new votes:</span>
       <% end %>
-      <% @finishedlightning.each do |game| %>
-        <span class="completedgamelink">
-          <%= link_to(game) do %>
-            <% if game.whovoted == "" %>
-              <div class="lightningindexbutton">
-            <% else %>
-              <div class="lightningindexbutton lightningsomeonevoted">
-            <% end %>
+      <span id="completedgamelist">
+        <%= render 'lightning' %>
+      </span>
+      <div id="paginator">
+        <%= paginate @finishedlightninglist, :remote => true %>
+      </div>
 
-              <span class="lightninglistcategory"><%= game.category %>:
-              </span>
-              <span class="lightninglistanswer">"<%= game.answer %>"</span>
-              <div class="lightninglistdata">
-                <%= image_tag("Thumbs-Up-128-Blue.png", size: "22", alt: "Thumbs Up", class: "lightindexresult-icon") %>
-                <span class="lightningindexdata"><%= game.thumbsup %></span>
-                <%= image_tag("Thumbs-Down-128-Blue.png", size: "22", alt: "Thumbs Down", class: "lightindexresult-icon") %>
-                <span class="lightningindexdata"><%= game.thumbsdown %></span>
-                <%= image_tag("Heart-128-red.png", size: "22", alt: "Heart", class: "lightindexresult-icon") %>
-                <span class="lightningindexdata"><%= game.hearts %></span>
-              </div>
-            </div>
-          <% end %></span>
-        <br>
-      <% end %>
-    </span>
-    <%= paginate @finishedlightning %>
     <% if current_user.tooltips == true %>
     <fieldset class="tooltips">
       <legend style="text-align: left; margin-left: 6px;">Tip</legend>
