email button move, css

--- a/app/assets/stylesheets/universal.css.scss
+++ b/app/assets/stylesheets/universal.css.scss
@@ -1,7 +1,8 @@
 /* main scheme is #03a9f4 main, #FF3100 notify, #e1f5fe background */
 
 body {
-  background: #e1f5fe;
+  /* background: #e1f5fe; */
+  background: antiquewhite;
   margin:0;
   padding:0;
   padding-bottom: 80px;
