--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -608,10 +608,10 @@
   }
   .voteemailsend {
     background: green !important;
-    width: 180px !important;
-    padding: 4px !important;
-    font-size: 85% !important;
-    border: 2px solid black !important;
+    width: 220px !important;
+    padding: 8px !important;
+    font-size: 110% !important;
+    border: 2px solid blue !important;
   }
   #edituserpage {
     width: 60%;
