--- a/app/views/games/_roundplaylong.html.erb
+++ b/app/views/games/_roundplaylong.html.erb
@@ -23,20 +23,20 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -113,20 +113,20 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -196,20 +196,20 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -277,20 +277,20 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -352,20 +352,20 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -423,20 +423,20 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -490,20 +490,20 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -553,20 +553,20 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
+
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro! Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
