--- a/app/views/games/_roundplayshort.html.erb
+++ b/app/views/games/_roundplayshort.html.erb
@@ -23,20 +23,20 @@
       </div>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro!
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro!
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -94,20 +94,20 @@
       </div>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro!
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro!
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -165,20 +165,20 @@
       </div>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro!
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro!
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
@@ -236,20 +236,20 @@
       </div>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
         <div class="allanswered">
-          You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro!
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
+            You've completed every acro!
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
           <% else %>
             (vote reminder email has been scheduled)
           <% end %>
