--- a/app/assets/stylesheets/universal.css.scss
+++ b/app/assets/stylesheets/universal.css.scss
@@ -2,7 +2,7 @@
 
 body {
   /* background: #e1f5fe; */
-  background: antiquewhite;
+  background: #f7ffff;
   margin:0;
   padding:0;
   padding-bottom: 80px;
